--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Kasar",
-    "name": "Kasar",
+    "short_name": "Frog Mod Ios",
+    "name": "Frog Mod Ios",
     "theme_color": "#f69435",
     "display": "standalone"
 }
